# PicTrace

./: .env.example  .gitignore  README.md  desktop  desktop.pub  package-lock.json  package.json  pyproject.toml  tailwind.config.js
core/: settings.py  urls.py
home/: urls.py  views.py
home/templates/home/: home.html
posts/: forms.py  models.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_post_created_at.py  0002_like.py  0003_alter_post_created_at.py  0003_comment.py
posts/templates/posts/: confirm_delete.html  create_post.html  edit_post.html  post_detail.html
static/css/: styles.css  tailwind.css
templates/shared/: footer.html  layout.html  navbar.html  navbar2.html  navbar_left.html  navbar_right.html  post_model.html  profile.html
users/: adapters.py  forms.py  models.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_alter_profile_avatar.py  0003_alter_profile_avatar.py  0004_alter_profile_avatar.py
users/templates/users/: activation_email.html  check_email.html  home.html  login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_subject.txt  profile.html  register.html  tsst.html  upload_avatar.html
