[tool.poetry]
name = "core"
version = "0.1.0"
description = "攝影打卡網站"
authors = ["bukun1012 <bukun0972167325@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.5"
python-dotenv = "^1.0.1"
boto3 = "^1.36.6"
django-storages = {extras = ["boto3"], version = "^1.14.4"}
djangorestframework = "^3.15.2"
pillow = "^11.1.0"
awscli = "^1.37.6"
django-allauth = "^65.3.1"
requests = "^2.32.3"
pyjwt = ">=2.8.0,<3"
psycopg = {extras = ["binary"], version = "^3.2.4"}
cryptography = "^44.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
